# Falcon

./: .dockerignore  .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml
agents/: account_historian.py  case_writer.py  detectors.py  llm_utils.py  network_mapper.py  pattern_hunter.py  preamble.py  reconciler.py  tools.py  triage.py
alembic/: env.py
alembic/versions/: 0001_initial_schema.py
api/: main.py
api/static/: dashboard.html
core/: __init__.py  db.py  llm_factory.py  models.py  schemas.py  settings.py  telemetry.py
data/: embed_patterns.py  fraud_scenarios.py  generate.py
demo_cache/: ACCOUNT_TAKEOVER.json  LAYERING.json  MULE_NETWORK.json  PEP_EXPOSURE.json  README.md  STRUCTURING.json
docs/: contradiction.md  evaluation.md  guardrails.md  supervisor.md
docs/adr/: 0001-langgraph-over-crewai.md  0002-postgres-ctes-over-neo4j.md  0003-fastmcp-tool-interface.md  0004-state-persistence-pause-resume.md  0005-custom-guardrails.md  0006-local-first-llm-strategy.md
docs/security/: red_team_report.md
eval/: dashboard.py  ground_truth.json  judge.py  run_evaluation.py  scoring.py
eval/results/: haiku-4.5_598d2f00-5d52-477b-91c1-17dc96bf49df.json  index.html
guardrails/: __init__.py  audit.py  escalation.py  justification.py  pii.py  schema.py  scope.py
infra/: Dockerfile
mcp_servers/case_management/: queries.py  server.py
mcp_servers/network_graph/: queries.py  server.py
mcp_servers/transaction_store/: queries.py  server.py
mcp_servers/watchlist/: queries.py  server.py
scripts/: demo_hitl.py  demo_rails.py  smoke_phase1.py  smoke_phase2.py  verify_cache.py
supervisor/: checkpointer.py  confidence.py  config.py  contradiction.py  graph.py  run.py  state.py
tests/: conftest.py  test_phase0_integration.py  test_phase0_unit.py  test_phase1_agents.py  test_phase1_graph.py  test_phase2_checkpointer.py  test_phase2_contradiction.py  test_phase2_guardrails.py  test_phase2_pattern_hunter.py  test_phase3_dashboard.py  test_phase3_judge.py  test_phase3_scoring.py  test_phase4_api.py
