[project]
name = "falcon"
version = "0.1.0"
description = "Fraud Autonomous Long-horizon Case Officer Network"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Orchestration / agents
    "langgraph>=0.2.50",
    "langgraph-checkpoint-postgres>=2.0.0",
    "langchain>=0.3.7",
    "langchain-core>=0.3.15",
    "langchain-community>=0.3.5",
    "langchain-ollama>=0.2.0",
    "langchain-aws>=0.2.4",
    "langchain-google-vertexai>=2.0.7",
    "langchain-anthropic>=0.3.0",
    "langsmith>=0.1.140",

    # MCP
    "fastmcp>=0.4.0",

    # API
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",

    # Database
    "sqlalchemy>=2.0.36",
    "alembic>=1.13.3",
    "psycopg[binary]>=3.2.3",
    "pgvector>=0.3.6",

    # Models / validation
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",

    # Observability
    "opentelemetry-api>=1.28.0",
    "opentelemetry-sdk>=1.28.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.28.0",
    "opentelemetry-instrumentation-fastapi>=0.49b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.49b0",
    "opentelemetry-instrumentation-httpx>=0.49b0",

    # Synthetic data
    "faker>=30.8.0",
    "numpy>=2.1.0",

    # Guardrails (Phase 2 but installed early)
    "presidio-analyzer>=2.2.355",
    "presidio-anonymizer>=2.2.355",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "httpx>=0.27.2",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["agents*", "supervisor*", "mcp_servers*", "guardrails*", "eval*", "api*", "data*", "core*", "tests*"]
exclude = ["frontend*", "infra*", "docs*", "alembic*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers"
markers = [
    "smoke: fast-running infrastructure smoke tests",
    "integration: requires docker-compose stack running",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
